<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="top"
        android:background="#E6E6E6">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:src="@drawable/amalogo"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="start" />

        <LinearLayout
            android:id="@+id/signInText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/intro_signin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/sign_in_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/already_a_customer"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/new_to_amazon"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:id="@+id/regUsername"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="Username"
            android:textColorHint="#AE636363"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:id="@+id/regEmail"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="Email Address"
            android:textColorHint="#AE636363"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:id="@+id/regPass"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="Password"
            android:textColorHint="#AE636363"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:id="@+id/regConfirmPass"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="Confirm Password"
            android:textColorHint="#AE636363"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/edittextshape"/>

        <Button
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:id="@+id/signUpButton"
            android:text="@string/sign_up_text"
            android:textSize="20dp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@drawable/intro_signin"/>
    </LinearLayout>

</FrameLayout>
